--- a/Avenue-Fashion/index.html
+++ b/Avenue-Fashion/index.html
@@ -255,12 +255,14 @@
                         </div>
                         <div class="product__down">
                             <p class="product__title">
-                                Womens burnt orange casual tee <sup>£</sup>29.95
+                                Womens burnt orange casual tee <span class="sign">£</span>29.95
                             </p>
                             <p class="product__desc">
                                 Classic casual t-shirt for women on the move. 
-                                100% cotton. <br>
-                                A hard-wearing sports t-shirt with microvent technology.
+                                <span class="cotton__desc">100% cotton.</span>
+                                <span class="product__detail">
+                                    A hard-wearing sports t-shirt with microvent technology.
+                                </span>
                             </p>
                             <a href="#" class="product__icon">
                                 <i class="fas fa-shopping-cart"></i>
