--- a/JS/BaiTap/index.html
+++ b/JS/BaiTap/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="number.js"></script>
+    <script src="GiaiCallBack.js"></script>
 </body>
 </html>
